--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
-<h1>This is the About page in branch herokuTemp</h1>
+<h1>This is the About page in branch herokuTemp  </h1>
+<h1>靖卓的APP heroku </h1>
+<h1>部署成功</h1>
