--- a/app/views/top_wares/index.html.erb
+++ b/app/views/top_wares/index.html.erb
@@ -7,6 +7,7 @@
     <%= render top_ware %>
     <p>
       <%= link_to "Show this top ware", top_ware %>
+      <%= button_to "Destroy this top ware", top_ware, method: :delete %>
     </p>
   <% end %>
 </div>
