basic complete before refactoring

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
 <h1>This is the About page in branch herokuTemp  </h1>
 <h1>靖卓的APP heroku </h1>
 <h1>部署成功</h1>
+
+<%= link_to "Home page",  root_path %>
+<%= link_to "Top Wares",  top_wares_path %>
