--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-Hello world!
+<h1>Welcome to Hello World</h1>
+<h1>This is the home page</h1>
+
+<%= link_to "About page",  about_path %>
+<%= link_to "Top Wares",  top_wares_path %>
