--- a/app/views/top_wares/index.html.erb
+++ b/app/views/top_wares/index.html.erb
@@ -4,11 +4,13 @@
 
 <div id="top_wares">
   <% @top_wares.each do |top_ware| %>
-    <%= render top_ware %>
-    <p>
-      <%= link_to "Show this top ware", top_ware %>
-      <%= button_to "Destroy this top ware", top_ware, method: :delete %>
-    </p>
+    <tr>
+      <td><%= render top_ware %></td>
+      <td><%= link_to "Show this top ware", top_ware %></td>
+      <td><%= link_to "Destroy this top ware", top_ware_path(top_ware), data: {turbo_method: :delete } %></td>
+      <td><%= link_to "Edit this top ware", edit_top_ware_path(top_ware)%></td>
+    </tr>
+    <p> </p>
   <% end %>
 </div>
 
