--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,9 +16,14 @@
     text-transform: uppercase;
     letter-spacing: -1px;
     font-weight: bold;
-
 }
-
+#home-container{
+    margin-top: 25px;
+    background-color: orange;
+}
+.lm-btn{
+    padding-bottom: 5px;
+}
 h1 {
     color: #857449;
-  }
+}
