--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,14 @@
-<h1>Welcome to Hello World</h1>
-<h1>This is the home page</h1>
-
+<div class="container" id="home-container">
+    <div class="jumbotron text-center" >
+        <h1 class="display-4">Welcome to My Page</h1>
+        <h1 class="display-4">This is the home page</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <div class="lm-btn">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </div>
+    </div>
+</div>
 <%= link_to "About page",  about_path %>
 <%= link_to "Top Wares",  top_wares_path %>
