--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container" id="home-container">
-    <div class="jumbotron text-center" >
+    <div class="jumbotron text-center text-white" >
         <h1 class="display-4">Welcome to My Page</h1>
         <h1 class="display-4">This is the home page</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
