--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,3 +37,14 @@
 h1 {
     color: #857449;
 }
+
+html,
+body{
+    height: 100%;
+}
+#page-content{
+    flex: 1 0 auto;
+}
+#sticky-footer{
+    flex-shrink: none;
+}
