embedded ruby refactoring

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
             <div class="lm-btn">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up!</a>
             </div>
         </div>
     </div>
@@ -17,6 +17,6 @@
 </div>
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-        <small>Copyright &copy; Your Website&nbsp;</small>
+        <small>Copyright &copy;<%= link_to 'Jingzhuo Tian', 'https://github.com/jingleBearOps', class:"text-white" %></small>
     </div>
 </footer>
