--- a/app/views/top_wares/show.html.erb
+++ b/app/views/top_wares/show.html.erb
@@ -3,7 +3,7 @@
 <%= render @top_ware %>
 
 <div>
-  <%= link_to "Edit this top ware", edit_top_ware_path(@top_ware) %> |
+  <%= link_to "Edit this top ware", edit_top_ware_path(@top_ware), class: "text-success"%> |
   <%= link_to "Back to top wares", top_wares_path %>
 
   <%= button_to "Destroy this top ware", @top_ware, method: :delete %>
