--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,6 @@
 </div>
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-        <small>Copyright &copy;<%= link_to 'Jingzhuo Tian', 'https://github.com/jingleBearOps', class:"text-white" %></small>
+        <small>Copyright &copy;<%= link_to 'Jingzhuo Tian', 'https://github.com/jingleBearOps', class:"text-white text-decoration-none" %></small>
     </div>
 </footer>
