create and edit interfaces

--- a/app/views/top_wares/edit.html.erb
+++ b/app/views/top_wares/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing top ware</h1>
+<div id="page-content">
+  <h1 class = "text-center mt-4">Editing this top wares</h1>
 
-<%= render "form", top_ware: @top_ware %>
 
-<br>
+  <%= render "form", top_ware: @top_ware %>
 
-<div>
-  <%= link_to "Show this top ware", @top_ware %> |
-  <%= link_to "Back to top wares", top_wares_path %>
+  <br>
+
+  <div>
+    <%= link_to "Show this top ware", @top_ware %> |
+    <%= link_to "Back to top wares", top_wares_path %>
+  </div>
 </div>
