--- a/app/views/top_wares/new.html.erb
+++ b/app/views/top_wares/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New top ware</h1>
+<div id="page-content">
+    <h1 class = "text-center mt-4">Create all top wares</h1>
+  <%= render "form", top_ware: @top_ware %>
 
-<%= render "form", top_ware: @top_ware %>
+  <br>
 
-<br>
-
-<div>
-  <%= link_to "Back to top wares", top_wares_path %>
+  <div>
+    <%= link_to "Back to top wares", top_wares_path %>
+  </div>
 </div>
