--- a/app/views/top_wares/_form.html.erb
+++ b/app/views/top_wares/_form.html.erb
@@ -1,37 +1,50 @@
+<div class="container">
 <%= form_with(model: top_ware) do |form| %>
-  <% if top_ware.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(top_ware.errors.count, "error") %> prohibited this top_ware from being saved:</h2>
+    <% if top_ware.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(top_ware.errors.count, "error") %> prohibited this top_ware from being saved:</h2>
 
-      <ul>
-        <% top_ware.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% top_ware.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group row">
+      <%= form.label :style, style: "display: block", class:"col-2 col-form-label"%>
+      <div class="col-10">
+        <%= form.text_field :style, class: "form-control"%>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= form.label :description, style: "display: block", class:"col-2 col-form-label" %>
+      <div class="col-10">
+      <%= form.text_area :description, rows: 10, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= form.label :price, style: "display: block", class:"col-2 col-form-label" %>
+      <div class="col-10">
+      <%= form.number_field :price, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= form.label :origin, style: "display: block", class:"col-2 col-form-label" %>
+      <div class="col-10">
+      <%= form.text_field :origin, class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <div class="col-sm-10">
+        <%= form.submit class: "btn btn-outline-light btn-xs"%>
+      </div>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :style, style: "display: block" %>
-    <%= form.text_field :style %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div>
-    <%= form.label :origin, style: "display: block" %>
-    <%= form.text_field :origin %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+  <%= link_to "Back to top wares", top_wares_path %>
+</div>
