--- a/app/views/top_wares/_form.html.erb
+++ b/app/views/top_wares/_form.html.erb
@@ -12,39 +12,43 @@
       </div>
     <% end %>
 
-    <div class="form-group row">
-      <%= form.label :style, style: "display: block", class:"col-2 col-form-label"%>
-      <div class="col-10">
-        <%= form.text_field :style, class: "form-control"%>
+    <div class="row justify-content-center">
+    <div class="col-10">
+      <div class="form-group row">
+        <%= form.label :style, style: "display: block", class:"col-2 col-form-label"%>
+        <div class="col-10">
+          <%= form.text_field :style, class: "form-control"%>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <%= form.label :description, style: "display: block", class:"col-2 col-form-label" %>
-      <div class="col-10">
-      <%= form.text_area :description, rows: 10, class: "form-control" %>
+      <div class="form-group row">
+        <%= form.label :description, style: "display: block", class:"col-2 col-form-label" %>
+        <div class="col-10">
+        <%= form.text_area :description, rows: 10, class: "form-control" %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <%= form.label :price, style: "display: block", class:"col-2 col-form-label" %>
-      <div class="col-10">
-      <%= form.number_field :price, class: "form-control" %>
+      <div class="form-group row">
+        <%= form.label :price, style: "display: block", class:"col-2 col-form-label" %>
+        <div class="col-10">
+        <%= form.number_field :price, class: "form-control" %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <%= form.label :origin, style: "display: block", class:"col-2 col-form-label" %>
-      <div class="col-10">
-      <%= form.text_field :origin, class: "form-control" %>
+      <div class="form-group row">
+        <%= form.label :origin, style: "display: block", class:"col-2 col-form-label" %>
+        <div class="col-10">
+        <%= form.text_field :origin, class: "form-control" %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row">
-      <div class="col-sm-10">
-        <%= form.submit class: "btn btn-outline-light btn-xs"%>
+      <div class="form-group row justify-content-center">
+        <div class="col-sm-10 justify-content-center">
+          <%= form.submit class: "btn btn-outline-light btn-xs"%>
+        </div>
       </div>
+    <% end %>
     </div>
-  <% end %>
-  <%= link_to "Back to top wares", top_wares_path %>
+    <%= link_to "[Back to top wares]", top_wares_path %>
+  </div>
 </div>
